2006-11-01  Keith Seitz  <keiths@redhat.com>

	* gnu/gcj/jvmti/Location.java: New file.
	* gnu/gcj/jvmti/BreakpointManager.java: New file.
	* jvmti.cc (_Jv_JVMTI_SetBreakpoint): New function.
	(_Jv_JVMTI_ClearBreakpoint): New function.
	(_Jv_JVMTI_Interface): Define SetBreakpoint and ClearBreakpoint.
	* sources.am: Regenerated.
	* Makefile.in: Regenerated.

2006-10-28  Keith Seitz  <keiths@redhat.com>

	* Makefile.am (nat_source_files): Add natBreakpoint.cc.
	* sources.am: Regenerated.
	* Makefile.in: Regenerated.
	* gnu/gcj/jvmti/Breakpoint.java: New file.
	* gnu/gcj/jvmti/natBreakpoint.java: New file.

2006-10-27  Keith Seitz  <keiths@redhat.com>

	* include/java-stack.h (ncodeMap): Declare.
	(_Jv_StackTrace): Make _Jv_GetMethodDeclaringClass friend.
	* java/lang/Class.h (_Jv_GetMethodDeclaringClass): Declare.
	* java/lang/natClass.cc (_Jv_GetMethodDeclaringClass): New
	function.
	* stacktrace.cc (ncodeMap): Redefine from file global to global
	for class _Jv_StackTrace.
	(_Jv_StackTrace::UpdateNCodeMap): Add interpreted classes, too,
	so that _Jv_GetMethodDeclaringClass can find them all.
	(_Jv_StackTrace::ClassForFrame): Exclude interpreted classes.
	* jvmti.cc (_Jv_JVMTI_GetMethodDeclaringClass): New function.
	(_Jv_JVMTI_Interface): Define GetMethodDeclaringClass function.

2006-10-25  Andreas Tobler  <a.tobler@schweiz.org>

	* testsuite/libjava.jvmti/natevents.cc (do_callback_arg_tests): Replace
	formatting modifiers %p with %#llx and cast the arguments.

2006-10-20  Tom Tromey  <tromey@redhat.com>

	* testsuite/libjava.jvmti/natevents.cc (do_callback_arg_tests):
	Correctly pass jvalues.

2006-10-18  Tom Tromey  <tromey@redhat.com>
	    Bryce McKinlay  <mckinlay@redhat.com>

	* testsuite/libjava.jni/register2.java: New file.
	* testsuite/libjava.jni/register2.out: New file.
	* testsuite/libjava.jni/register2.c: New file.
	* java/lang/natClass.cc (_Jv_GetClassNameUtf8): New function.
	* java/lang/Class.h (_Jv_GetClassNameUtf8): Declare.