@@ -1,3 +1,8 @@
+2006-11-02  Keith Seitz  <keiths@redhat.com>
+
+	* jvmti.cc (_Jv_JVMTI_GetLineNumberTable): New function.
+	(_Jv_JVMTI_Interface): Define GetLineNumberTable.
+
 2006-11-01  Keith Seitz  <keiths@redhat.com>
 
 	* gnu/gcj/jvmti/Location.java: New file.
